tests/errors/compiler/no_comma_in_setmotor/getansensor.c
void main()
{
	int arr[1];
	getansensor(1);
}
